k8s/apps/monitoring/karma/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app karma
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: *app
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *app
    spec:
      containers:
        - name: karma
          image: ghcr.io/prymitive/karma:v0.133
          resources:
            requests:
              cpu: "10m"
              memory: "64Mi"
            limits:
              memory: "64Mi"
          ports:
            - containerPort: 8080
              name: http
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          livenessProbe:
            httpGet:
              path: "/health"
              port: http
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: *app
