k8s/apps/monitoring/karma/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: &app karma
spec:
  selector:
    app.kubernetes.io/name: *app
  ports:
    - port: 80
      targetPort: http
      name: http
