k8s/apps/monitoring/karma/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app karma
  labels:
    name: *app
spec:
  ingressClassName: internal
  rules:
    - host: &host karma.cbannister.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: karma
                port:
                  name: http
      tls:
        host: [*host]
